[tool.poetry]
name = "zyutils"
version = "0.1.0"
description = ""
authors = ["zweix123 <1979803044@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
prettytable = "^3.6.0"
requests = "^2.28.2"
fake-useragent = "^1.1.3"
aiohttp = "^3.8.4"
tqdm = "^4.65.0"
chardet = "^5.1.0"
bs4 = "^0.0.1"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
types-requests = "^2.28.11.17"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
